--- a/src/app/pins/pin-form/pin-form.component.html
+++ b/src/app/pins/pin-form/pin-form.component.html
@@ -1,1 +1,64 @@
-<p>pin-form works!</p>
+<form [formGroup]="pinForm" (ngSubmit)="createPin()">
+    <div class="form-group">
+      <label for="title" class="mb-1">Title <span class="required">*</span></label>
+      <input type="text" class="form-control" id="title" formControlName="title" [class.is-invalid]="f.title.errors && f.title.touched">
+      <div class="invalid-feedback" *ngIf="f.title.errors?.required">Title is required</div>
+    </div>
+
+    <div class="form-group mt-3">
+      <label for="title" class="mb-1">Select Image <span class="required">*</span></label>
+      
+      <div
+        class="drop-zone"
+        (drop)="onDrop($event)"
+        (dragover)="onDragover($event)"
+        (dragenter)="onDragenter($event)"
+        (change)="onFileChange($event)"
+        formControlName="file"
+        value="file"
+      >
+        Drag & Drop files here
+      </div>
+    </div>
+
+    <p *ngIf="file">{{ file.name }}</p>
+  
+    <div class="form-group">
+        <label for="collaborators">Select Collaboratory  <span class="required">*</span></label>
+        <select multiple id="collaborators" class="form-control" formControlName="collaborators">
+            <option *ngFor="let customer of allCustomers">{{ customer.title }}</option>
+        </select>
+        <div *ngIf="pinForm.get('collaborators').touched && pinForm.get('collaborators').invalid">
+          <div class="alert alert-danger">Collaboratory is required.</div>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <label for="privacy">Privacy  <span class="required">*</span></label>
+        
+        <div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="privacy" id="privateRadio1" formControlName="privacy"
+            value="private">
+            <label class="form-check-label" for="privateRadio1">
+            Private
+            </label>
+        </div>
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="privacy" id="publicRadio2" formControlName="privacy"
+            value="public">
+            <label class="form-check-label" for="publicRadio2">
+            Public
+            </label>
+        </div>
+            <div *ngIf="pinForm.get('privacy').touched && pinForm.get('privacy').invalid">
+            <div class="alert alert-danger">Privacy is required.</div>
+            </div>
+        </div>
+      </div>
+    
+    <div class="text-center mt-4 mb-4">
+        <button type="submit" class="btn btn-primary" [disabled]="pinForm.invalid && this.file">Create Customer</button>
+    </div>
+   
+  </form>
