--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-/* You can add global styles to this file, and also import other style files */
+.alertStyles {
+    position: fixed !important;
+    bottom: 0;
+    z-index: 103;
+    font-weight: bold;
+    right: 20px;
+    border: 1px solid #000 !important;
+  }
+
+  .cursorPointer{
+    cursor: pointer;
+  }
+
+  .required {
+    color: red;
+  }
+  
+  label{
+    font-weight: bold;
+  }
