Changed button name

--- a/src/app/pins/pin-form/pin-form.component.html
+++ b/src/app/pins/pin-form/pin-form.component.html
@@ -58,7 +58,7 @@
       </div>
     
     <div class="text-center mt-4 mb-4">
-        <button type="submit" class="btn btn-primary" [disabled]="pinForm.invalid && this.file">Create Customer</button>
+        <button type="submit" class="btn btn-primary" [disabled]="pinForm.invalid && this.file">Create Pin</button>
     </div>
    
   </form>
